--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,15 @@
             "email": "530004000@qq.com"
         }
     ],
-    "require": {},
+    "keywords": [
+        "php",
+        "laravel"
+    ],
+    "require": {
+        "laravel/laravel": "5.5.*",
+        "php": "^7.1.3"
+
+    },
     "autoload": {
         "psr-4": {
             "QiuYu\\HelloWorld\\": "src/"
